--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React Scratch App</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <title>React Speedtester</title>
   </head>
   <body>
     <!-- React js code injected point -->
     <div id="app"></div>
-    
-    <!-- Compiled react code -->
-    <script src="build/transformed.js"></script>
   </body>
 </html>
