--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -9,6 +9,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <script src="/env.js"></script>
     <title>React Speedtester</title>
   </head>
   <body>
